--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,6 +14,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      docker:
+        image: docker:19.03.12
+        options: --privileged
+        ports:
+          - 3306:3306
+          - 3000:3000
+        volumes:
+          - /var/run/docker.sock:/var/run/docker.sock
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -32,7 +42,7 @@ jobs:
 
     - name: Build project
       run: pnpm run build
-      
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
@@ -43,17 +53,20 @@ jobs:
         key: ${{ runner.os }}-buildx-${{ github.sha }}
         restore-keys: |
           ${{ runner.os }}-buildx-
-          
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        
+
     - name: Build and push Docker images
       run: |
-        docker build -t myapp:latest .
+        docker-compose -f docker-compose.yml build
         docker-compose -f docker-compose.yml up -d
 
     - name: Run tests in Docker container
-      run: docker exec myapp_container_name pnpm test
+      run: docker exec app pnpm test
+
+    - name: Shut down Docker Compose
+      run: docker-compose -f docker-compose.yml down
